--- a/index.html
+++ b/index.html
@@ -23,20 +23,274 @@
         <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
 
         <script>
-            kaboom();
-            // define gravity
-    setGravity(2400)
+            kaboom({
+             background: [141, 183, 255],
+            }
 
-    // load a default sprite
-    loadSprite("bean", "/sprites/bean.png")
-    loadSprite("coin", "/sprites/coin.png")
-    loadSprite("spike", "/sprites/spike.png")
-    loadSprite("grass", "/sprites/grass.png")
-    onKeyPress("space", () => {
-    if (bean.isGrounded()) {
-        bean.jump();
-    }
-});
+            // load assets
+            loadSprite("bean", "/sprites/bean.png")
+            loadSprite("coin", "/sprites/coin.png")
+            loadSprite("door", "/sprites/door.png")
+            loadSprite("grass", "/sprites/grass.png")
+            loadSprite("spike", "/sprites/spike.png")
+
+            setGravity(3200)
+
+            // custom component controlling enemy patrol movement
+function patrol(speed = 60, dir = 1) {
+	return {
+		id: "patrol",
+		require: [ "pos", "area" ],
+		add() {
+			this.on("collide", (obj, col) => {
+				if (col.isLeft() || col.isRight()) {
+					dir = -dir
+				}
+			})
+		},
+		update() {
+			this.move(speed * dir, 0)
+		},
+	}
+}
+
+// define some constants
+const JUMP_FORCE = 1320
+const MOVE_SPEED = 480
+const FALL_DEATH = 2400
+
+const LEVELS = [
+    [
+        "                                           ",
+        "   >    $$$$$          $$$$$               ",
+        "   ==========          ======              ",
+        " ^^ >     $$$    > $$$       ^^^ $$$$$$$$ @",
+        "=============== ===========================",
+    ],
+
+    [   "             $$$$$                              ",
+        "            =======                             ",
+        "        $$$$$     $$$$$                         ",
+        "       =======   =======                        ",
+        "  > $$        ^^^         ^^^  > $$$$$$  ^^^  @ ",
+        "================================================",
+    ],
+
+    [
+        "               $$$$$$$$$$$$   >                  ",
+        "               ================                  ",
+        "   > $$$$$$$                      >  $$$$$$$ >   ",
+        "  ==========                     ============== @",
+        "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^",
+        "=================================================",
+    ],
+
+    const levelConf = {
+	tileWidth: 64,
+	tileHeight: 64,
+	tiles: {
+		"=": () => [
+			sprite("grass"),
+			area(),
+			body({ isStatic: true }),
+			anchor("bot"),
+			offscreen({ hide: true }),
+			"platform",
+			scale(.08),
+        ],
+            "$": () => [
+			sprite("coin"),
+			area(),
+			pos(0, -9),
+			anchor("bot"),
+			offscreen({ hide: true }),
+			scale(.2),
+			"coin",
+		],
+
+            "^": () => [
+			sprite("spike"),
+			area({ scale: 0.5 }),
+			body({ isStatic: true }),
+			anchor("bot"),
+			offscreen({ hide: true }),
+			"danger",
+			scale(.2),
+		],
+
+            ">": () => [
+			sprite("dino"),
+			area(),
+			anchor("bot"),
+			body(),
+			patrol(),
+			offscreen({ hide: true }),
+			"enemy",
+			scale(.1),
+        ],
+            "@": () => [
+			sprite("door"),
+			area({ scale: 0.5 }),
+			anchor("bot"),
+			pos(0, -12),
+			offscreen({ hide: true }),
+			"portal",
+			scale(.3),
+		],
+
+        scene("game", ({ levelId, coins } = { levelId: 0, coins: 0 }) => {
+
+        // add level to scene
+        const level = addLevel(LEVELS[levelId ?? 0], levelConf)
+
+        // define player object
+        const player = add([
+        sprite("bean"),
+        pos(0, 0),
+        area(),
+        scale(1),
+        // makes it fall to gravity and jumpable
+        body(),
+        // the custom component we defined above
+        big(),
+        anchor("bot"),
+        ])
+            // action() runs every frame
+	        player.onUpdate(() => {
+		    // center camera to player
+		    camPos(player.pos)
+		    // check fall death
+		    if (player.pos.y >= FALL_DEATH) {
+			go("lose")
+		}
+	})
+    player.onBeforePhysicsResolve((collision) => {
+		if (collision.target.is(["platform", "soft"]) && player.isJumping()) {
+			collision.preventResolution()
+		}
+	})
+
+	player.onPhysicsResolve(() => {
+		// Set the viewport center to player.pos
+		camPos(player.pos)
+	})
+
+	// if player onCollide with any obj with "danger" tag, lose
+	player.onCollide("danger", () => {
+		go("lose")
+		// play("hit")
+	})
+
+	player.onCollide("door", () => {
+		// play("portal")
+		if (levelId + 1 < LEVELS.length) {
+			go("game", {
+				levelId: levelId + 1,
+				coins: coins,
+			})
+		} else {
+			go("lose")
+		}
+	})
+
+	player.onGround((l) => {
+		if (l.is("enemy")) {
+			player.jump(JUMP_FORCE * 1.5)
+			destroy(l)
+			addKaboom(player.pos)
+			// play("powerup")
+		}
+	})
+
+	player.onCollide("enemy", (e, col) => {
+		// if it's not from the top, die
+		if (!col.isBottom()) {
+			go("lose")
+			// play("hit")
+		}
+	})
+
+    let coinPitch = 0
+
+	onUpdate(() => {
+		if (coinPitch > 0) {
+			coinPitch = Math.max(0, coinPitch - dt() * 100)
+		}
+	})
+
+	player.onCollide("coin", (c) => {
+		destroy(c)
+	    play("coin", {
+		detune: coinPitch,
+		 })
+		coinPitch += 100
+		coins += 1
+		coinsLabel.text = coins
+		if(coins=="100"){
+			go("win")
+		}
+
+
+	})
+
+	const coinsLabel = add([
+		text(coins),
+		pos(24, 24),
+		fixed(),
+	])
+
+	function jump() {
+		// these 2 functions are provided by body() component
+		if (player.isGrounded()) {
+			player.jump(JUMP_FORCE)
+		}
+	}
+    // jump with space
+	onKeyPress("space", jump)
+
+onKeyDown("left", () => {
+    player.move(MOVE_SPEED, 0)
+})
+
+onKeyDown("right", () => {
+    player.move(-MOVE_SPEED, 0)
+})
+
+onKeyPress("down", () => {
+    player.weight = 3
+})
+
+onKeyRelease("down", () => {
+    player.weight = 1
+})
+
+onGamepadButtonPress("south", jump)
+
+onGamepadStick("left", (v) => {
+    player.move(v.x * MOVE_SPEED, 0)
+})
+
+onKeyPress("f", () => {
+    setFullscreen(!isFullscreen())
+})
+
+})
+
+scene("lose", () => {
+	add([
+		text("You Lose"),
+	])
+	onKeyPress(() => go("game"))
+})
+
+scene("win", () => {
+	add([
+		text("You Win"),
+	])
+	onKeyPress(() => go("game"))
+})
+
+go("game")
 
         </script>
     </body>
